--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#Cil">Cil</a></li>
+								<li><a href="#Permission">权限系统</a></li>
 								<li><a href="#User">导入用户</a></li>
 								<li><a href="#domain">域</a></li>
 								<li><a href="#testdata">测试数据格式</a></li>
@@ -43,66 +43,51 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Cil -->
-							<article id="Cil">
-								<h2 class="major">Cil</h2>
-<p>Tip:
-在使用 cli 之前，请完成数据库配置。<br>指令中使用 <code>&lt;&gt;</code> 括起来的参数必须给出，用 <code>[]</code> 括起来的参数可以给出，若不给出则按照默认设置。<br><strong>用户请根据自己的情况替换掉用 <code>&lt;&gt;</code> 或是 <code>[]</code> 包括起来的部分（括号也应替换）</strong></p>
-<p>cli 可以帮助用户在控制台下快捷地进行一些操作。<br>这些命令需要以在终端以 root 用户执行（安装时执行命令的位置）。<br>下面给出了一些常用的例子。</p>
-<h2 id="创建用户">创建用户</h2>
-<p>很少使用。建议通过 控制面板&gt;导入用户 功能代替</p>
-<pre><code class="language-sh">hydrooj cli user create &lt;mail&gt; &lt;username&gt; &lt;password&gt; &lt;uid&gt;
-# 该用户的邮箱、用户名和密码
+						<!-- Permission -->
+							<article id="Permission">
+								<h2 class="major">权限系统</h2>
+<p>定海七中OJ/Hydro 的权限系统使用双层结构，分别为 Privilege (PRIV) 和 Permission (PERM)。</p>
+<p>权限在系统内部使用位运算表示，具体的定义与数值可以查看 <a href="https://github.com/hydro-dev/Hydro/blob/master/packages/hydrooj/src/model/builtin.ts">源代码</a>。</p>
 
-# 如创建邮箱为 hydro@hydro.local，用户名为 Hydro，密码为 hydrohydro ，UID 为 2 的用户：
-# 请确保 UID 为不小于 2 的正整数且未被占用，邮箱和用户名均不重复。
-hydrooj cli user create hydro@hydro.local Hydro hydrohydro 2
-</code></pre>
-<p>若一切正常，运行该指令后您会从命令行窗口中看到该用户 uid。</p>
-<h2 id="设置全站管理员">设置全站管理员</h2>
-<pre><code class="language-sh">hydrooj cli user setSuperAdmin &lt;uid&gt;
+<h2>Privilege</h2>
 
-# 如设置 uid 为 2 的用户为管理员：
-hydrooj cli user setSuperAdmin 2
-</code></pre>
-<h2 id="设置用户权限">设置用户权限</h2>
-<pre><code class="language-sh">hydrooj cli user setPriv &lt;uid&gt; &lt;priv&gt;
-</code></pre>
-<p>关于参数 <code>[priv]</code> ，可阅读 <a href="/dev/PERM_PRIV/">此处</a>。</p>
-<h2 id="更改用户密码">更改用户密码</h2>
-<pre><code class="language-sh">hydrooj cli user setPassword &lt;uid&gt; &lt;password&gt;
+<p>Privilege 是用户在整套系统内拥有的权限，在所有域均生效。如创建用户，编辑系统设置，创建域，查看域等等。</p>
 
-# 如将 uid 为 1 的用户的密码改为 hydrohydro：
-hydrooj cli user setPassword 1 hydrohydro
-</code></pre>
-<h2 id="创建评测账号">创建评测账号</h2>
-<p>先 <a href="#%E5%88%9B%E5%BB%BA%E7%94%A8%E6%88%B7">创建一个账号</a>。  </p>
-<p>您需要留意运行此指令返回的数字，表示该用户的 <code>uid</code>，需要填入下面的指令中，然后给予该账号评测权限。</p>
-<pre><code class="language-sh">hydrooj cli user setJudge &lt;uid&gt;
-</code></pre>
-<p>完成后将配置的用户名及密码写入评测机配置文件，评测机即可连接到网页端。</p>
-<h2 id="黑名单相关">黑名单相关</h2>
-<p>用户封禁：</p>
-<pre><code class="language-sh">hydrooj cli user setPriv &lt;uid&gt; 0
-</code></pre>
-<p>IP/邮箱域名封禁：</p>
-<pre><code class="language-sh"># key 格式为 ip::xxx.xxx.xxx.xxx （封禁 IP 访问） 或是 mail::xxx.com （禁止 xxx.com 的邮箱注册）
-hydrooj cli blacklist add &lt;key&gt; [duration] # 将 &lt;key&gt; 拉入黑名单，时长为 [duration] （以月为单位的整数，默认为 12，若 duration=0 则永久封禁）
-hydrooj cli blacklist get &lt;key&gt; # 获取黑名单中有关 &lt;key&gt; 的信息
-hydrooj cli blacklist del &lt;key&gt; # 将 &lt;key&gt; 移出黑名单
-</code></pre>
-<h2 id="命令列表">命令列表</h2>
-<p>所有于 <a href="https://github.com/hydro-dev/Hydro/tree/master/packages/hydrooj/src/model">此文件夹</a> 下的函数均可用 cli 调用。</p>
-<p>这里并没有列出所有可以运行的指令，因为其中很多功能我们更推荐通过 Web 访问。</p>
-<pre><code class="language-sh">hydrooj cli user create &lt;mail&gt; &lt;uname&gt; &lt;password&gt; [uid] [regip] [priv]
-# 创建邮箱为 &lt;mail&gt;，用户名为 &lt;uname&gt;，密码为 &lt;password&gt;，ID 为 [uid]，注册 ip 为 [regip]，权限为 [priv] 的用户
-hydrooj cli user setPriv &lt;uid&gt; &lt;priv&gt; # 将 ID 为 &lt;uid&gt; 的用户的权限设为 &lt;priv&gt;
-hydrooj cli user setPassword &lt;uid&gt; &lt;password&gt; # 将 ID 为 &lt;uid&gt; 的用户的密码设置为 &lt;password&gt;
-hydrooj cli user setEmail &lt;uid&gt; &lt;mail&gt; # 将 ID 为 &lt;uid&gt; 的用户的邮箱设置为 &lt;mail&gt;
-hydrooj cli user setSuperAdmin &lt;uid&gt; # 将 ID 为 &lt;uid&gt; 的用户设为全站管理员
-hydrooj cli system set &lt;key&gt; &lt;value&gt; # 修改系统设置 &lt;key&gt; 值为 &lt;value&gt;
-</code></pre>
+<p>特别地，<code>PRIV.PRIV_USER_PROFILE</code> 控制一个账号是否能够作为普通账号登录。若不具有此权限，该账号将无法登录（被封禁）。</p>
 
+<p>常见需求：</p>
+
+<ul>
+<li>若不想让普通用户上传文件 可以关闭default角色的 <code>PRIV_CREATE_FILE</code> 权限</li>
+<li>若需要关闭站内消息 可以关闭对应的 <code>PRIV_SEND_MESSAGE</code> 权限</li>
+</ul>
+
+<h2>Permission</h2>
+
+<p>Permission 是用户在单个域内拥有的权限，如创建题目/比赛，发布/删除讨论等等。</p>
+
+<p>如果 <code>PERM.PERM_VIEW</code> 被禁用，则该用户无法查看此域。</p>
+
+<h2>角色</h2>
+
+<p>通常我们需要给特定的一组用户分配相同的权限。在用户量较多的时候这会非常混乱难以管理，为此我们设计了【角色】，便于批量操作与管理。</p>
+<p>角色是针对域内权限（PERM）的。在系统内置了三个角色：</p>
+
+<ul>
+<li>guest （对未登录用户生效，含已封禁用户）</li>
+<li>default （对所有未指定角色的用户生效，包括未加入域的用户）</li>
+<li>root （拥有所有权限）</li>
+</ul>
+
+<p>通常情况下，如果需要对域做特殊的权限控制，应当新建一个用户组（例如 member）并将选定用户加入该用户组。</p>
+<p>将角色移出域和将用户的角色设置为 default 是等价的。</p>
+<p>若有需要，您也可以创建 teacher, admin 等其他角色。</p>
+<p>考虑到系统中的用户可能非常多（数万甚至数十万），在用户列表中仅会显示权限不为 default 的用户。</p>
+
+<h2>加入域</h2>
+
+<p>加入域的过程实际上是 <strong>用户通过某种方式自助将自己的权限组由 default 变更到另一权限组（如member）</strong> 的过程。</p>
+<p>因此在入域申请链接的权限组中选择 guest 和 default 是没有意义的。</p>
 							</article>
 
 						<!-- User -->
