--- a/index.html
+++ b/index.html
@@ -559,7 +559,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 定海七中OJ-Docs By 沈夏世轩</p>
+						<p class="copyright">&copy; 定海七中OJ-Docs By 沈夏世轩 @2024</p>
+						<p><a href="https://hydro.js.org/">Click to go to Hydro Docs</a></p>
 					</footer>
 
 			</div>
