--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 						<div class="content">
 							<div class="inner">
 								<h1>定海七中OJ-站点文档</h1>
-								<p>定海七中OJ Powered by Hydro Community, Modified by 沈夏世轩</p>
-								<p>高性能在线测评系统</p>
+								<p>
+								定海七中OJ Powered by 
+								<a href="https://hydro.js.org/" target="_blank">Hydro</a> 
+								Community, Modified by 沈夏世轩
+								</p>
 							</div>
 						</div>
 						<nav>
